tests/errors/sem_call15.java
public class sem_call15 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(i , 10 , i);
}
}